fix: :globe_with_meridians: Many fixes to pt-BR localization

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -54,7 +54,7 @@
   "SDM.BackgroundRole": "Papel",
   "SDM.BackgroundRole1": "Papel 1",
   "SDM.BackgroundRole2": "Papel 2",
-  "SDM.BackgroundRow01.Flavor": "terra azul",
+  "SDM.BackgroundRow01.Flavor": "Terra Azul",
   "SDM.BackgroundRow01.Role1": "narco",
   "SDM.BackgroundRow01.Role2": "boticário",
   "SDM.BackgroundRow01.Spin": "viagem onírica movida a drogas",
@@ -74,17 +74,17 @@
   "SDM.BackgroundRow04.Role2": "mecânico",
   "SDM.BackgroundRow04.Spin": "tecnomagia de horror corporal",
   "SDM.BackgroundRow04.Task": "modificar e criar seres vivos",
-  "SDM.BackgroundRow05.Flavor": "carrossel",
+  "SDM.BackgroundRow05.Flavor": "Costeiro",
   "SDM.BackgroundRow05.Role1": "gato",
   "SDM.BackgroundRow05.Role2": "escovador",
-  "SDM.BackgroundRow05.Spin": "capanga de estimação contratado",
+  "SDM.BackgroundRow05.Spin": "guarda-costas mascote contratado",
   "SDM.BackgroundRow05.Task": "fazer gatos [ou outros mestres] felizes",
   "SDM.BackgroundRow06.Flavor": "catador",
   "SDM.BackgroundRow06.Role1": "todo",
   "SDM.BackgroundRow06.Role2": "químico",
   "SDM.BackgroundRow06.Spin": "filosofias explosivas",
   "SDM.BackgroundRow06.Task": "manipular os iks básicos da matéria",
-  "SDM.BackgroundRow07.Flavor": "terra púrpura",
+  "SDM.BackgroundRow07.Flavor": "Terra Púrpura",
   "SDM.BackgroundRow07.Role1": "terapeuta",
   "SDM.BackgroundRow07.Role2": "barista",
   "SDM.BackgroundRow07.Spin": "expertise de pequenos negócios",
@@ -104,12 +104,12 @@
   "SDM.BackgroundRow10.Role2": "cantor",
   "SDM.BackgroundRow10.Spin": "falar com árvores, ouvir ervas",
   "SDM.BackgroundRow10.Task": "moldar plantas, esculpir móveis",
-  "SDM.BackgroundRow11.Flavor": "cidade violeta",
+  "SDM.BackgroundRow11.Flavor": "Cidade Violeta",
   "SDM.BackgroundRow11.Role1": "vivente",
   "SDM.BackgroundRow11.Role2": "chapado",
   "SDM.BackgroundRow11.Spin": "carregar coral-terra na pele",
   "SDM.BackgroundRow11.Task": "moldar pedra, cantar casas",
-  "SDM.BackgroundRow12.Flavor": "terra vermelha",
+  "SDM.BackgroundRow12.Flavor": "Terras Vermelhas",
   "SDM.BackgroundRow12.Role1": "aqua",
   "SDM.BackgroundRow12.Role2": "agricultor",
   "SDM.BackgroundRow12.Spin": "falar com peixes estranhos",
@@ -129,12 +129,12 @@
   "SDM.BackgroundRow15.Role2": "trabalhador",
   "SDM.BackgroundRow15.Spin": "entender os fundamentos da sobrevivência",
   "SDM.BackgroundRow15.Task": "otimizar a produção primária",
-  "SDM.BackgroundRow16.Flavor": "distrito RL",
+  "SDM.BackgroundRow16.Flavor": "Distrito da Terra Vermelha",
   "SDM.BackgroundRow16.Role1": "vida",
   "SDM.BackgroundRow16.Role2": "gerador",
   "SDM.BackgroundRow16.Spin": "girar histórias e mentiras",
   "SDM.BackgroundRow16.Task": "criar conteúdo humano envolvente",
-  "SDM.BackgroundRow17.Flavor": "hexade",
+  "SDM.BackgroundRow17.Flavor": "Hexades",
   "SDM.BackgroundRow17.Role1": "vilarejo",
   "SDM.BackgroundRow17.Role2": "sanitarista",
   "SDM.BackgroundRow17.Spin": "viajar oculto nas entranhas urbanas",
@@ -144,12 +144,12 @@
   "SDM.BackgroundRow18.Role2": "invocador",
   "SDM.BackgroundRow18.Spin": "manipular as velhas mentes",
   "SDM.BackgroundRow18.Task": "interagir com mentes desencarnadas",
-  "SDM.BackgroundRow19.Flavor": "terra laranja",
+  "SDM.BackgroundRow19.Flavor": "Terras Laranjas",
   "SDM.BackgroundRow19.Role1": "mula",
   "SDM.BackgroundRow19.Role2": "sussurrador",
   "SDM.BackgroundRow19.Spin": "elevar animais oprimidos",
   "SDM.BackgroundRow19.Task": "interagir com mentes de corpos animais",
-  "SDM.BackgroundRow20.Flavor": "halfling",
+  "SDM.BackgroundRow20.Flavor": "meio-linga",
   "SDM.BackgroundRow20.Role1": "herbalista",
   "SDM.BackgroundRow20.Role2": "oficial",
   "SDM.BackgroundRow20.Spin": "nublar mentes para objetivos comuns",
@@ -179,12 +179,12 @@
   "SDM.BackgroundRow25.Role2": "caminhante",
   "SDM.BackgroundRow25.Spin": "viajar seguro fora da rede",
   "SDM.BackgroundRow25.Task": "manter as estradas vivas e respeitadas",
-  "SDM.BackgroundRow26.Flavor": "terra amarela",
+  "SDM.BackgroundRow26.Flavor": "Terras Amarelas",
   "SDM.BackgroundRow26.Role1": "inspetor",
   "SDM.BackgroundRow26.Role2": "detetive particular",
   "SDM.BackgroundRow26.Spin": "descobrir e guardar segredos sombrios",
   "SDM.BackgroundRow26.Task": "observar, ouvir e relatar às autoridades",
-  "SDM.BackgroundRow27.Flavor": "anão a diesel",
+  "SDM.BackgroundRow27.Flavor": "anã volkan a diesel",
   "SDM.BackgroundRow27.Role1": "licenciado",
   "SDM.BackgroundRow27.Role2": "mercador",
   "SDM.BackgroundRow27.Spin": "maximizar ganhos imediatos",
@@ -194,7 +194,7 @@
   "SDM.BackgroundRow28.Role2": "soldado",
   "SDM.BackgroundRow28.Spin": "cruzar etiqueta minuciosa e rigor militar",
   "SDM.BackgroundRow28.Task": "manter vivas as tradições marciais",
-  "SDM.BackgroundRow29.Flavor": "açafrão",
+  "SDM.BackgroundRow29.Flavor": "safraniana",
   "SDM.BackgroundRow29.Role1": "astrólogo",
   "SDM.BackgroundRow29.Role2": "general",
   "SDM.BackgroundRow29.Spin": "manter ordem e disciplina",
@@ -209,7 +209,7 @@
   "SDM.BackgroundRow31.Role2": "pastor",
   "SDM.BackgroundRow31.Spin": "lubrificar e multiplicar máquinas",
   "SDM.BackgroundRow31.Task": "manter os rebanhos sintéticos em ordem",
-  "SDM.BackgroundRow32.Flavor": "terra verde",
+  "SDM.BackgroundRow32.Flavor": "Terras Verdes",
   "SDM.BackgroundRow32.Role1": "conteúdo",
   "SDM.BackgroundRow32.Role2": "promotor",
   "SDM.BackgroundRow32.Spin": "apagar ideias falsas",
@@ -466,7 +466,7 @@
   "SDM.NPCTraitBonded": "Vinculado. Gasta vida para conceder a um aliado bônus igual em sua próxima rolagem.",
   "SDM.NPCTraitCharger": "Arremetedor. Dano dobrado após uma carga direta.",
   "SDM.NPCTraitCircleOfPain": "Círculo da Dor. Aliados próximos causam e sofrem dano dobrado. Inimigos adjacentes apenas sofrem dano dobrado.",
-  "SDM.NPCTraitCommonHumanity": "Humanidade Comum. Gasta 1 vida para apelar à compreensão e negociar (teste).",
+  "SDM.NPCTraitCommonHumanity": "Humanidade Comum. Gasta 1 vida para apelar à compreensão e negociar (salvaguarda).",
   "SDM.NPCTraitDeathCurse": "Maldição da Morte. O assassino sofre um fardo psíquico.",
   "SDM.NPCTraitDenial": "Negação. Inimigos adjacentes têm dificuldade para se mover.",
   "SDM.NPCTraitDesperateShot": "Tiro Desesperado. Causa dano triplo quando com 1 de vida.",
@@ -478,20 +478,20 @@
   "SDM.NPCTraitMartyr": "Mártir. Ao morrer, concede seu bônus a aliados próximos.",
   "SDM.NPCTraitOnceAgain": "Mais Uma Vez. Ressuscita 2 rodadas após a morte. Apenas uma vez.",
   "SDM.NPCTraitOvercharge": "Sobrecarga. Gasta vida igual ao nível para dobrar o dano.",
-  "SDM.NPCTraitPhase": "Fasear. Gasta 1 vida para se tornar fantasma por 1 rodada.",
+  "SDM.NPCTraitPhase": "Tornar-se intangível. Gasta 1 vida para ficar intangível por 1 rodada.",
   "SDM.NPCTraitResistomorph": "Resistomorfo. Após ser atingido, ignora esse tipo de ataque por 1 rodada.",
   "SDM.NPCTraitRiposte": "Ripostar. Contra-ataque gratuito contra ataques que errem.",
   "SDM.NPCTraitRockblood": "Sangrocha. Abaixo da metade da vida, defesa dobrada.",
   "SDM.NPCTraitShatter": "Estilhaçar. Ao morrer, causa dano de nível × d4 a todos próximos.",
   "SDM.NPCTraitShieldfriend": "Escudamigo. Pode receber um golpe destinado a aliados próximos.",
-  "SDM.NPCTraitSlam": "Impacto. Gasta 5 de vida: derruba inimigos adjacentes (teste).",
+  "SDM.NPCTraitSlam": "Impacto. Gasta 5 de vida: derruba inimigos adjacentes (salvaguarda).",
   "SDM.NPCTraitSpringer": "Saltador. Afasta-se após atacar sem provocar ataques de oportunidade.",
   "SDM.NPCTraitStabber": "Punhalador. Dano dobrado em oponentes surpresos.",
   "SDM.NPCTraitSteadfast": "Inabalável. Não pode ser movido contra sua vontade.",
   "SDM.NPCTraitTactical": "Tático. Após ser atingido, ganha +3 de defesa contra esse tipo de ataque.",
   "SDM.NPCTraitTeamwork": "Trabalho em Equipe. +2 de bônus e defesa ao lado de um aliado.",
-  "SDM.NPCTraitTickingCorpse": "Cadáver Relógio. Causa dano dobrado a todos próximos 1d4 rodadas após a morte (teste para anular).",
-  "SDM.NPCTraitToolmaker": "Armeiro. Improvise uma arma ou ferramenta em 1 rodada.",
+  "SDM.NPCTraitTickingCorpse": "Cadáver-relógio. Causa dano dobrado a todos próximos 1d4 rodadas após a morte (salvaguarda para anular).",
+  "SDM.NPCTraitToolmaker": "Fazedor de ferramentas. Improvise uma arma ou ferramenta em 1 rodada.",
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
   "SDM.OptionalField": "{field} (opcional)",
@@ -509,7 +509,7 @@
   "SDM.PowerOvercharge": "Sobrecarga",
   "SDM.PowerOverchargeAbbr": "Sobrecarga",
   "SDM.PowerOverchargeRollFormula": "Rolagem de Sobrecarga",
-  "SDM.PowerRange": "Alcançe",
+  "SDM.PowerRange": "Alcance",
   "SDM.PowerRangeAbbr": "Alc",
   "SDM.PowerRollFormula": "Fórmula de rolagem",
   "SDM.PowerRollFormulaAbbr": "Rolagem",
@@ -527,7 +527,7 @@
   "SDM.ReactionCheck": "Oráculo do Comportamento",
   "SDM.ReactionMessage1": "Eles avançam como agentes enlouquecidos da corrupção cósmica.",
   "SDM.ReactionMessage12": "Amigáveis e interessados. Ajudarão com qualquer abertura.",
-  "SDM.ReactionMessage13plus": "Insistem em ajudar, mesmo sem necessidade. É rude recusar, mas vão desperdiçar seu... Ah, céus. Xícara de chá?",
+  "SDM.ReactionMessage13plus": "Insistem em ajudar, mesmo sem necessidade. É de mau-tom recusar, mas vão desperdiçar seu… ah, céus… aceitam uma xícara de chá?",
   "SDM.ReactionMessage2": "Agressivos e hostis. Atacam com qualquer pretexto.",
   "SDM.ReactionMessage3to5": "Pois é, eles te odeiam.",
   "SDM.ReactionMessage6to8": "Hesitantes, indecisos, de trato difícil e desconfiados.",
@@ -639,12 +639,12 @@
   "SDM.TabBiography": "Biografia",
   "SDM.TabEffects": "Efeitos",
   "SDM.TabInventory": "Inventário",
-  "SDM.TableDesc.BrickBastions": "Escudos flutuantes, armaduras animadas, golems de terra, troncos vivos, hordas de zumbis,<br>centopéias de carne rastejante, armaduras-vomês, esqueletos gelatinosos<br>e outras criaturas que não conseguem evitar golpes. Frequentemente lentas.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
-  "SDM.TableDesc.CrystalCannons": "Feiticeiros elétricos, goblins gasosos, lançadores de esporos, ursos caidores,<br>discos da perdição,esferas flutuantes, liches de porcelana, fanáticos tanáticos,<br>e outros que causam dano mas não conseguem resistir.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
-  "SDM.TableDesc.DartingDodgers": "Sapos saltadores, saltadores chicoteantes, vomitorriais, ágeis, fúrias de fogo, ninjas de pesadelo,<br>cavaleiros de néon, golems de mercúrio, bandidos biorreforçados, e outras criaturas que dependem<br>da velocidade para evitar ataques e acertar golpes.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
-  "SDM.TableDesc.ErraticExpendables": "Drones da perdição, esqueletos explosivos, esquilos suicidas, ghoulies cuspidos,<br>granadeiros algemados, cavalaria de bicicleta.<br>Não se espera que retornem da luta.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
-  "SDM.TableDesc.GenericSynthesizedCreature": "Os deuses em sua bondade pós-mecânica, os demiurgos, os geradores de vida,<br>as máquinas-mãe, os criadores de matéria, os vomitadores de bestas, dão à luz muitas coisas.<br>Muitos não sobrevivem, alguns aterrorizam. Se está vivo e tem caráter, esta tabela serve.<br><b>Vastlands GuideBook (VLG p. 162)</b>",
-  "SDM.TableDesc.HumansOfThePananthropy": "A pan-humanidade comum inclui pós-humanos próximos do padrão, retro-humanos, anões,<br>meio-elfos, halflings, quarterlings, meio-orcs, golems, liches, humanos de ferro, lings e fantasmas.<br>Se vive numa cidade e faz coisas humanas, provavelmente é algum tipo de humano.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.BrickBastions": "Escudos flutuantes, armaduras animadas, golems de terra, troncos vivos, hordas de zumbis,<br>centopeias de carne rastejante, armaduras-mevo, esqueletos gelatinosos<br>e outras criaturas que não conseguem evitar golpes. Frequentemente lentas.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.CrystalCannons": "Magos elétricos, goblins gasosos, lançadores de esporos, ursos caidores, discos da perdição, esferas flutuantes, liches de porcelana, fanáticos tanáticos, e outros que causam dano mas não conseguem resistir.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.DartingDodgers": "Sapos saltadores, saltadores chicoteantes, mevos torrenciais, ágeis, fúrias de fogo, ninjas de pesadelo,<br>cavaleiros de néon, golems de mercúrio, bandidos biorreforçados, e outras criaturas que dependem<br>da velocidade para evitar ataques e acertar golpes.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.ErraticExpendables": "Drones da perdição, esqueletos explosivos, esquilos suicidas, ghouls cuspidos,<br>granadeiros algemados, cavalaria de bicicleta.<br>Não se espera que retornem da luta.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.GenericSynthesizedCreature": "Os deuses em sua bondade pós-mecânica, os demiurgos, os geradores de vida,<br>as máquinas-mãe, os criadores de matéria, os mevomitadores de bestas, dão à luz muitas coisas.<br>Muitos não sobrevivem, alguns aterrorizam. Se está vivo e tem caráter, esta tabela serve.<br><b>Vastlands GuideBook (VLG p. 162)</b>",
+  "SDM.TableDesc.HumansOfThePananthropy": "A pan-humanidade comum inclui pós-humanos próximos do padrão, retro-humanos, anões,<br>meio-elfos, meio-lingas, quarto-lingas, meio-orcs, golems, liches, humanos de ferro, lings e fantasmas.<br>Se vive numa cidade e faz coisas humanas, provavelmente é algum tipo de humano.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
   "SDM.TabNotes": "Anotações",
   "SDM.TabPet": "Pet",
   "SDM.Target": "Alvo",
@@ -652,7 +652,7 @@
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferComplete": "Transferência realizada com sucesso",
   "SDM.TransferFailed": "Falha na transferência: {error}",
-  "SDM.TransferFailedGeneric": "Transferência falhou inexperadamente",
+  "SDM.TransferFailedGeneric": "Transferência falhou inesperadamente",
   "SDM.TransferItemComplete": "{item} transferido para {target}",
   "SDM.TransferReceived": "Você recebeu {item} de {source}",
   "SDM.TransferRequestSent": "Pedido de transferência enviado",
@@ -673,7 +673,7 @@
   "SDM.WardTypeWearable": "Vestível",
   "SDM.WardValue": "Resguardo",
   "SDM.WeaponDamage": "Dano",
-  "SDM.WeaponRange": "Alcançe",
+  "SDM.WeaponRange": "Alcance",
   "SDM.WeaponVersatile": "Versátil",
   "SDM.WeaponVersatileDamage": "Dano versátil",
   "SDM.Wiki": "Wiki",
