fix: :sparkles: Add advantage or disadvantage to saving throw, reaction and morale rolls

--- a/lang/en.json
+++ b/lang/en.json
@@ -361,7 +361,7 @@
   "SDM.ErrorTransferExcessCashAmount": "Cannot transfer more cash than available",
   "SDM.ErrorTransferInvalidItemState": "Item state changed during transfer",
   "SDM.ErrorTransferItemNotAvailable": "Item is no longer available for transfer",
-  "SDM.ErrorTransferNoActiveGM": "Item transfer requires a GM to be online",
+  "SDM.ErrorTransferNoActiveGM": "Item transfer requires a Referee to be online",
   "SDM.ErrorTransferSessionExperied": "Transfer session expired",
   "SDM.ErrorTransferTargetHasItem": "Target actor already has this item",
   "SDM.ErrorUpdateDoc": "Error updating {doc}",
@@ -582,7 +582,7 @@
   "SDM.SettingsBaseTraitSlots": "Base Trait Slots",
   "SDM.SettingsBaseTraitSlotsHint": "Base number of trait slots for a character",
   "SDM.SettingsCurrencyImg": "Currency image",
-  "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' GM Macro",
+  "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' Referee Macro",
   "SDM.SettingsCurrencyName": "Currency name",
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
