feat: :sparkles: Add optional hard limit rule to d20 rolls

--- a/lang/en.json
+++ b/lang/en.json
@@ -585,6 +585,8 @@
   "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' Referee Macro",
   "SDM.SettingsCurrencyName": "Currency name",
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
+  "SDM.SettingsDefaultHardLimitValue": "Hard Limit Value",
+  "SDM.SettingsDefaultHardLimitValueHint": "Determines the maximum bonus allowed on d20 rolls",
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Changes the default hero dice type for all characters",
   "SDM.SettingsDefaultMaxPowers": "Default Max Powers",
@@ -612,6 +614,8 @@
   "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Plays a sound effect when a character levels up",
   "SDM.SettingsSkillModifierStep": "Skill Rank Increment",
   "SDM.SettingsSkillModifierStepHint": "Changes the bonus amount given in a roll by each skill rank",
+  "SDM.SettingsUseHardLimitRule": "Optional Hard Limit Rule",
+  "SDM.SettingsUseHardLimitRuleHint": "Enables a hard limit on bonuses applied to d20 rolls",
   "SDM.SheetActor": "SDM Actor Sheet",
   "SDM.SheetEditMode": "Edit Mode",
   "SDM.SheetItem": "SDM Item Sheet",
