--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -585,6 +585,8 @@
   "SDM.SettingsCurrencyImgHint": "Imagem padrão usada pelo macro de transferência de dinheiro",
   "SDM.SettingsCurrencyName": "Nome da moeda",
   "SDM.SettingsCurrencyNameHint": "Nome padrão para a moeda do mundo",
+  "SDM.SettingsDefaultHardLimitValue": "Valor do Limite Máximo",
+  "SDM.SettingsDefaultHardLimitValueHint": "Define o valor do bônus máximo permitido em rolagens de d20",
   "SDM.SettingsDefaultHeroDiceType": "Dado Heróico padrão",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Muda o tipo padrão de dado heróico para todos personagens jogadores",
   "SDM.SettingsDefaultMaxPowers": "Máximo padrão de podres",
@@ -612,6 +614,8 @@
   "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Habilita a reprodução de um efeito sonoro quando personagens sobem de nível",
   "SDM.SettingsSkillModifierStep": "Modificador de Perícias",
   "SDM.SettingsSkillModifierStepHint": "Muda o incremento padrão de bonus para cada ranque de uma perícia",
+  "SDM.SettingsUseHardLimitRule": "Regra Opcional de Limite Máximo",
+  "SDM.SettingsUseHardLimitRuleHint": "Ativa o limite máximo nos bônus aplicados a rolagens de d20",
   "SDM.SheetActor": "Ficha de Ator SDM",
   "SDM.SheetEditMode": "Modo de Edição",
   "SDM.SheetItem": "Ficha de Item SDM",
