fix: :ambulance: Fixed pt-BR localization for random background trait generator

--- a/lang/en.json
+++ b/lang/en.json
@@ -255,6 +255,7 @@
   "SDM.BackgroundRow40.Spin": "unlock doors with your blood",
   "SDM.BackgroundRow40.Task": "share social love and vibes",
   "SDM.BackgroundSpin": "Spin",
+  "SDM.BackgroundSwapOrder": "swap",
   "SDM.BackgroundTask": "Task",
   "SDM.BackgroundTraitCreated": "{flavor} {role} background trait created for {name} character!",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
