--- a/lang/en.json
+++ b/lang/en.json
@@ -342,6 +342,7 @@
   "SDM.EffectsLabel.system.trait_slots_bonus": "Affects the number of trait slots",
   "SDM.EffectsLabel.system.ward_bonus": "Ward bonus (affects mental defense and all saving throw rolls)",
   "SDM.EffectsLabel.system.weapon_item_slots_bonus": "Number weapon items that won't take items slots",
+  "SDM.EffectsLabel.system.burden_penalty_bonus": "Burden Pernalty (negative values to remove penalty)",
   "SDM.EffectSource": "Source",
   "SDM.EffectTemporary": "Temporary Effects",
   "SDM.EffectToggle": "Toggle Effect",
