feat: :zap: Allow creating trait powers when dropping powers in a character sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -281,6 +281,7 @@
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "SDM.Cost": "Cost",
   "SDM.CreateNPC": "Create NPC",
+  "SDM.CreatePowerItem": "Create Power as",
   "SDM.CreateRandomNPC": "NPC Generator",
   "SDM.CreatureTable": "NPC Table",
   "SDM.CriticalFailure": "Critical Failure",
@@ -460,7 +461,7 @@
   "SDM.MoraleOverOutcomeMessage": "The NPC breaks: flees, retreats, surrenders or ends combat in some other way. The better trained, the steadier the withdrawal.",
   "SDM.MoraleUnderOutcome": "Under Morale",
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
-  "SDM.NoPowers": "Empty Power Album",
+  "SDM.NoPowers": "Empty Album of Power",
   "SDM.Notes": "Notes",
   "SDM.NpcCr": "CR",
   "SDM.NPCCreated": "Random NPC {name}, level: {level} was created! ",
@@ -499,7 +500,7 @@
   "SDM.OptionalField": "{field} (optional)",
   "SDM.OriginalRoll": "Original roll",
   "SDM.Power": "Power",
-  "SDM.PowerAlbum": "Power Album",
+  "SDM.PowerAlbum": "Album of Power",
   "SDM.PowerCost": "Power Cost",
   "SDM.PowerCostHint": "Life cost for each power level",
   "SDM.PowerDescription": "Description",
@@ -593,7 +594,7 @@
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Changes the default hero dice type for all characters",
   "SDM.SettingsDefaultMaxPowers": "Default Max Powers",
-  "SDM.SettingsDefaultMaxPowersHint": "Default number of max stored powers in a power album",
+  "SDM.SettingsDefaultMaxPowersHint": "Default maximum number of stored powers in an album of power",
   "SDM.SettingsDefaultSaveValue": "Initial Save Value",
   "SDM.SettingsDefaultSaveValueHint": "The initial value of save, the target value for saving throw rolls",
   "SDM.SettingsEscalatorDie": "Escalator Die",
@@ -698,7 +699,7 @@
   "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Mount",
   "TYPES.Item.power": "Power",
-  "TYPES.Item.power_album": "Power Album",
+  "TYPES.Item.power_album": "Album of Power",
   "TYPES.Item.skill": "Skill",
   "TYPES.Item.trait": "Trait",
   "TYPES.Item.vehicle": "Vehicle",
