--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -281,6 +281,7 @@
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
   "SDM.Cost": "Custo",
   "SDM.CreateNPC": "Criar NPC",
+  "SDM.CreatePowerItem": "Criar Poder como",
   "SDM.CreateRandomNPC": "Gerador de NPC",
   "SDM.CreatureTable": "Tabela de NPCs",
   "SDM.CriticalFailure": "Falha Crítica",
