feat: :sparkles: Send inventory items to chat when you right click them

--- a/lang/en.json
+++ b/lang/en.json
@@ -666,6 +666,9 @@
   "SDM.TransferRequestSent": "Transfer request sent",
   "SDM.TransferTo": "To",
   "SDM.TwoHanded": "Two-Handed",
+  "SDM.Unit.sacks.abbr": "sk",
+  "SDM.Unit.soaps.abbr": "sp",
+  "SDM.Unit.stones.abbr": "st",
   "SDM.UnitCash": "cash",
   "SDM.UnitSack": "sack",
   "SDM.UnitSacks": "sacks",
@@ -696,6 +699,7 @@
   "TYPES.Actor.npc": "NPC",
   "TYPES.Item.armor": "Armor",
   "TYPES.Item.burden": "Burden",
+  "TYPES.Item.cash": "Cash",
   "TYPES.Item.gear": "Gear",
   "TYPES.Item.mount": "Mount",
   "TYPES.Item.power": "Power",
