--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -666,6 +666,9 @@
   "SDM.TransferRequestSent": "Pedido de transferência enviado",
   "SDM.TransferTo": "Para",
   "SDM.TwoHanded": "Duas mãos",
+  "SDM.Unit.sacks.abbr": "sc",
+  "SDM.Unit.soaps.abbr": "crt",
+  "SDM.Unit.stones.abbr": "mo",
   "SDM.UnitCash": "dinheiro",
   "SDM.UnitSack": "saca",
   "SDM.UnitSacks": "sacas",
@@ -696,6 +699,7 @@
   "TYPES.Actor.npc": "NPC",
   "TYPES.Item.armor": "Armadura",
   "TYPES.Item.burden": "Fardo",
+  "TYPES.Item.cash": "Dinheiro",
   "TYPES.Item.gear": "Equipamento",
   "TYPES.Item.mount": "Montaria",
   "TYPES.Item.power": "Poder",
