feat: :sparkles: Add transports tab to caravan sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -385,12 +385,22 @@
   "SDM.FieldArmor": "Armor",
   "SDM.FieldBiography": "Biography",
   "SDM.FieldBonus": "Bonus",
+  "SDM.FieldCapacity": "Capacity",
+  "SDM.FieldCargo": "Cargo",
   "SDM.FieldCharXP": "PC xp",
   "SDM.FieldCharXPTitle": "Character Experience",
+  "SDM.FieldCompany": "Company",
+  "SDM.FieldCost": "Cost (€)",
+  "SDM.FieldCostFrequency": "Frequency",
+  "SDM.FieldCurrentDestination": "Current Destination",
+  "SDM.FieldCurrentLocation": "Current Location",
+  "SDM.FieldDate": "Date",
   "SDM.FieldDebt": "Debt",
   "SDM.FieldDefense": "Defense",
+  "SDM.FieldETA": "ETA",
   "SDM.FieldExpense": "Expense",
   "SDM.FieldFatigue": "Fatigue",
+  "SDM.FieldFinancier": "Financier",
   "SDM.FieldFoes": "Foes",
   "SDM.FieldFriends": "Friends",
   "SDM.FieldHeroDice": "Hero Dice",
@@ -400,6 +410,7 @@
   "SDM.FieldLikes": "Likes",
   "SDM.FieldLooks": "Looks",
   "SDM.FieldMentalDefense": "Mental Defense",
+  "SDM.FieldMotto": "Motto",
   "SDM.FieldName": "Name",
   "SDM.FieldPhysicalDefense": "Physical Defense",
   "SDM.FieldPlayerXP": "Player xp",
@@ -409,7 +420,11 @@
   "SDM.FieldSkills": "Skills",
   "SDM.FieldSocialDefense": "Social Defense",
   "SDM.FieldSpecies": "Species",
+  "SDM.FieldSpeed": "Speed",
+  "SDM.FieldSupply": "Supply",
   "SDM.FieldWealth": "Wealth",
+  "SDM.FieldWeeklyCost": "Total Cost / Wk",
+  "SDM.FieldWeeklySupply": "Total Supply / Wk",
   "SDM.ForceOrFail": "Sacrifice something to succeed",
   "SDM.FrequencyDay": "Day",
   "SDM.FrequencyWeek": "Week",
@@ -634,17 +649,20 @@
   "SDM.SkillModifierStep": "Modifier Step",
   "SDM.SkillPhylake": "Phylake",
   "SDM.SkillSkilled": "Skilled",
-  "SDM.SpeedFast": "Fast",
-  "SDM.SpeedSlow": "Slow",
-  "SDM.SpeedStandard": "Standard",
-  "SDM.SpeedVeryFast": "Very Fast",
-  "SDM.SpeedVerySlow": "Very Slow",
-  "SDM.SpeedVeryVerySlow": "Very Very Slow",
+  "SDM.SpeedFast": "Fast (+1)",
+  "SDM.SpeedSlow": "Slow (-1)",
+  "SDM.SpeedStandard": "Normal (0)",
+  "SDM.SpeedVeryFast": "Very Fast (+2)",
+  "SDM.SpeedVerySlow": "Very Slow (-2)",
+  "SDM.SpeedVeryVerySlow": "Very Very Slow (-3)",
   "SDM.StatusBlind": "blind",
   "SDM.StatusEncumbered": "encumbered",
   "SDM.StatusSlow": "slow",
   "SDM.Success": "Success",
   "SDM.TabBiography": "Biography",
+  "SDM.TabCaravanInventory": "Cargo",
+  "SDM.TabCaravanNotes": "Missions & Goals",
+  "SDM.TabCrew": "Agents & Helpers",
   "SDM.TabEffects": "Effects",
   "SDM.TabInventory": "Inventory",
   "SDM.TableDesc.BrickBastions": "Floating shields, animated armors, soil golems, lumberlings, horde zombies, crawling flesh centipedes,<br>armor vomes,gelatinous skeletons, and other creatures that can't avoid getting hit. Often slow.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
@@ -655,6 +673,8 @@
   "SDM.TableDesc.HumansOfThePananthropy": "Common pan-humanity includes all close-to-baseline sentient and soulful post-humans, retro-humans, dwarfs,<br>half-elfs, halflings, quarterlings, half-orcs, golems, liches, iron humans, lings, and ghosts.<br> If it lives in a town and does human things, it's probably a human of some sort.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
   "SDM.TabNotes": "Notes",
   "SDM.TabPet": "Pet",
+  "SDM.TabRoutes": "Routes",
+  "SDM.TabTransport": "Beasts & Vehicles",
   "SDM.Target": "Target",
   "SDM.Transfer": "Transfer {type}",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
