--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -385,12 +385,22 @@
   "SDM.FieldArmor": "Armadura",
   "SDM.FieldBiography": "Biografia",
   "SDM.FieldBonus": "Bônus",
+  "SDM.FieldCapacity": "Capacidade",
+  "SDM.FieldCargo": "Carga",
   "SDM.FieldCharXP": "XP Pers.",
   "SDM.FieldCharXPTitle": "Experiência do Personagem",
+  "SDM.FieldCompany": "Empresa",
+  "SDM.FieldCost": "Custo (€)",
+  "SDM.FieldCostFrequency": "Frequência",
+  "SDM.FieldCurrentDestination": "Destino",
+  "SDM.FieldCurrentLocation": "Localização",
+  "SDM.FieldDate": "Data",
   "SDM.FieldDebt": "Débito",
   "SDM.FieldDefense": "Defesa",
+  "SDM.FieldETA": "Tempo Estimado",
   "SDM.FieldExpense": "Despesa",
   "SDM.FieldFatigue": "Fadiga",
+  "SDM.FieldFinancier": "Financiador",
   "SDM.FieldFoes": "Inimigos",
   "SDM.FieldFriends": "Amigos",
   "SDM.FieldHeroDice": "Dado Heróico",
@@ -400,6 +410,7 @@
   "SDM.FieldLikes": "Gostos",
   "SDM.FieldLooks": "Aparência",
   "SDM.FieldMentalDefense": "Defesa Mental",
+  "SDM.FieldMotto": "Mote",
   "SDM.FieldName": "Nome",
   "SDM.FieldPhysicalDefense": "Defesa Física",
   "SDM.FieldPlayerXP": "XP Jogador",
@@ -409,7 +420,11 @@
   "SDM.FieldSkills": "Perícias",
   "SDM.FieldSocialDefense": "Defesa Social",
   "SDM.FieldSpecies": "Espécie",
+  "SDM.FieldSpeed": "Velocidade",
+  "SDM.FieldSupply": "Requisito",
   "SDM.FieldWealth": "Riqueza",
+  "SDM.FieldWeeklyCost": "Custo / Semana",
+  "SDM.FieldWeeklySupply": "Requisito / Semana",
   "SDM.ForceOrFail": "Sacrifique algo ou falhe",
   "SDM.FrequencyDay": "Dia",
   "SDM.FrequencyWeek": "Semana",
@@ -645,6 +660,7 @@
   "SDM.StatusSlow": "lento",
   "SDM.Success": "Sucesso",
   "SDM.TabBiography": "Biografia",
+  "SDM.TabCrew": "Equipe",
   "SDM.TabEffects": "Efeitos",
   "SDM.TabInventory": "Inventário",
   "SDM.TableDesc.BrickBastions": "Escudos flutuantes, armaduras animadas, golems de terra, troncos vivos, hordas de zumbis,<br>centopeias de carne rastejante, armaduras-mevo, esqueletos gelatinosos<br>e outras criaturas que não conseguem evitar golpes. Frequentemente lentas.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
@@ -655,6 +671,8 @@
   "SDM.TableDesc.HumansOfThePananthropy": "A pan-humanidade comum inclui pós-humanos próximos do padrão, retro-humanos, anões,<br>meio-elfos, meio-lingas, quarto-lingas, meio-orcs, golems, liches, humanos de ferro, lings e fantasmas.<br>Se vive numa cidade e faz coisas humanas, provavelmente é algum tipo de humano.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
   "SDM.TabNotes": "Anotações",
   "SDM.TabPet": "Pet",
+  "SDM.TabRoutes": "Rotas",
+  "SDM.TabTransport": "Transportes",
   "SDM.Target": "Alvo",
   "SDM.Transfer": "Transferir {type}",
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
