feat: :sparkles: Add transport and routes tab in caravan sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -382,6 +382,7 @@
   "SDM.FavoriteSkill": "Favorite Skill",
   "SDM.FeatureVersatile": "versatile",
   "SDM.FieldAbilitiesPl": "Abilities",
+  "SDM.FieldAgent": "Agent",
   "SDM.FieldArmor": "Armor",
   "SDM.FieldBiography": "Biography",
   "SDM.FieldBonus": "Bonus",
@@ -392,6 +393,7 @@
   "SDM.FieldCompany": "Company",
   "SDM.FieldCost": "Cost (€)",
   "SDM.FieldCostFrequency": "Frequency",
+  "SDM.FieldCostPerWeek": "Cost / Week",
   "SDM.FieldCurrentDestination": "Current Destination",
   "SDM.FieldCurrentLocation": "Current Location",
   "SDM.FieldDate": "Date",
@@ -404,10 +406,13 @@
   "SDM.FieldFoes": "Foes",
   "SDM.FieldFriends": "Friends",
   "SDM.FieldHeroDice": "Hero Dice",
+  "SDM.FieldInvestment": "investment",
   "SDM.FieldLevel": "Level",
   "SDM.FieldLife": "Remaining Life",
   "SDM.FieldLifeMax": "Life",
   "SDM.FieldLikes": "Likes",
+  "SDM.FieldLocationA": "Location A",
+  "SDM.FieldLocationB": "Location B",
   "SDM.FieldLooks": "Looks",
   "SDM.FieldMentalDefense": "Mental Defense",
   "SDM.FieldMotto": "Motto",
@@ -415,15 +420,20 @@
   "SDM.FieldPhysicalDefense": "Physical Defense",
   "SDM.FieldPlayerXP": "Player xp",
   "SDM.FieldPlayerXPTitle": "Player Experience",
+  "SDM.FieldQuirk": "Quirk",
   "SDM.FieldRevenue": "Revenue",
+  "SDM.FieldRisk": "risk",
+  "SDM.FieldRunName": "Run Name",
   "SDM.FieldSaveTarget": "Save",
   "SDM.FieldSkills": "Skills",
   "SDM.FieldSocialDefense": "Social Defense",
   "SDM.FieldSpecies": "Species",
   "SDM.FieldSpeed": "Speed",
   "SDM.FieldSupply": "Supply",
+  "SDM.FieldSupplyPerWeek": "Supply / Week",
+  "SDM.FieldTransportType": "Type",
   "SDM.FieldWealth": "Wealth",
-  "SDM.FieldWeeklyCost": "Total Cost / Wk",
+  "SDM.FieldWeeklyCost": "Total Cost (€) / Wk",
   "SDM.FieldWeeklySupply": "Total Supply / Wk",
   "SDM.ForceOrFail": "Sacrifice something to succeed",
   "SDM.FrequencyDay": "Day",
@@ -576,6 +586,7 @@
   "SDM.RollTitle": "{prefix}Roll: {title}",
   "SDM.RollType": "{type} Roll",
   "SDM.RollUseHeroDice": "Use Hero Dice",
+  "SDM.Route": "route",
   "SDM.SavingThrowDoom": "DOOM",
   "SDM.SavingThrowDoomMessage": "What was, will be. No save.",
   "SDM.SavingThrowRoll": "{ability} Saving Throw",
@@ -676,6 +687,7 @@
   "SDM.TabRoutes": "Routes",
   "SDM.TabTransport": "Beasts & Vehicles",
   "SDM.Target": "Target",
+  "SDM.Total": "total",
   "SDM.Transfer": "Transfer {type}",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferComplete": "Transfer completed successfully",
@@ -685,6 +697,7 @@
   "SDM.TransferReceived": "You received {item} from {source}",
   "SDM.TransferRequestSent": "Transfer request sent",
   "SDM.TransferTo": "To",
+  "SDM.Transport": "Transport",
   "SDM.TwoHanded": "Two-Handed",
   "SDM.Unit.sacks.abbr": "sk",
   "SDM.Unit.soaps.abbr": "sp",
