--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -382,6 +382,7 @@
   "SDM.FavoriteSkill": "Perícia Favorita",
   "SDM.FeatureVersatile": "versátil",
   "SDM.FieldAbilitiesPl": "Atributos",
+  "SDM.FieldAgent": "Agente",
   "SDM.FieldArmor": "Armadura",
   "SDM.FieldBiography": "Biografia",
   "SDM.FieldBonus": "Bônus",
@@ -392,6 +393,7 @@
   "SDM.FieldCompany": "Empresa",
   "SDM.FieldCost": "Custo (€)",
   "SDM.FieldCostFrequency": "Frequência",
+  "SDM.FieldCostPerWeek": "Custo / Semana",
   "SDM.FieldCurrentDestination": "Destino",
   "SDM.FieldCurrentLocation": "Localização",
   "SDM.FieldDate": "Data",
@@ -404,10 +406,13 @@
   "SDM.FieldFoes": "Inimigos",
   "SDM.FieldFriends": "Amigos",
   "SDM.FieldHeroDice": "Dado Heróico",
+  "SDM.FieldInvestment": "investimento",
   "SDM.FieldLevel": "Nível",
   "SDM.FieldLife": "Vida Restante",
   "SDM.FieldLifeMax": "Vida",
   "SDM.FieldLikes": "Gostos",
+  "SDM.FieldLocationA": "Origem",
+  "SDM.FieldLocationB": "Destino",
   "SDM.FieldLooks": "Aparência",
   "SDM.FieldMentalDefense": "Defesa Mental",
   "SDM.FieldMotto": "Mote",
@@ -415,13 +420,18 @@
   "SDM.FieldPhysicalDefense": "Defesa Física",
   "SDM.FieldPlayerXP": "XP Jogador",
   "SDM.FieldPlayerXPTitle": "Experiência do Jogador",
+  "SDM.FieldQuirk": "Quirk",
   "SDM.FieldRevenue": "Renda",
+  "SDM.FieldRisk": "risco",
+  "SDM.FieldRunName": "Nome da Rota",
   "SDM.FieldSaveTarget": "Salvaguarda",
   "SDM.FieldSkills": "Perícias",
   "SDM.FieldSocialDefense": "Defesa Social",
   "SDM.FieldSpecies": "Espécie",
   "SDM.FieldSpeed": "Velocidade",
   "SDM.FieldSupply": "Requisito",
+  "SDM.FieldSupplyPerWeek": "Requisito / Semana",
+  "SDM.FieldTransportType": "Tipo",
   "SDM.FieldWealth": "Riqueza",
   "SDM.FieldWeeklyCost": "Custo / Semana",
   "SDM.FieldWeeklySupply": "Requisito / Semana",
@@ -576,6 +586,7 @@
   "SDM.RollTitle": "Rolagem de {prefix}: {title}",
   "SDM.RollType": "Rolagem de {type}",
   "SDM.RollUseHeroDice": "Usar Dados Heróicos",
+  "SDM.Route": "rota",
   "SDM.SavingThrowDoom": "PERDIÇÃO",
   "SDM.SavingThrowDoomMessage": "O que foi, será. Não há salvação.",
   "SDM.SavingThrowRoll": "Salvaguarda de {ability}",
@@ -660,6 +671,8 @@
   "SDM.StatusSlow": "lento",
   "SDM.Success": "Sucesso",
   "SDM.TabBiography": "Biografia",
+  "SDM.TabCaravanInventory": "Carga",
+  "SDM.TabCaravanNotes": "Missões e Objetivos",
   "SDM.TabCrew": "Equipe",
   "SDM.TabEffects": "Efeitos",
   "SDM.TabInventory": "Inventário",
@@ -674,6 +687,7 @@
   "SDM.TabRoutes": "Rotas",
   "SDM.TabTransport": "Transportes",
   "SDM.Target": "Alvo",
+  "SDM.Total": "total",
   "SDM.Transfer": "Transferir {type}",
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferComplete": "Transferência realizada com sucesso",
@@ -683,6 +697,7 @@
   "SDM.TransferReceived": "Você recebeu {item} de {source}",
   "SDM.TransferRequestSent": "Pedido de transferência enviado",
   "SDM.TransferTo": "Para",
+  "SDM.Transport": "Transporte",
   "SDM.TwoHanded": "Duas mãos",
   "SDM.Unit.sacks.abbr": "sc",
   "SDM.Unit.soaps.abbr": "crt",
