feat: :sparkles: Allow NPCs to use skills and add experience to NPC sheets

--- a/lang/en.json
+++ b/lang/en.json
@@ -401,6 +401,7 @@
   "SDM.FieldDefense": "Defense",
   "SDM.FieldETA": "ETA",
   "SDM.FieldExpense": "Expense",
+  "SDM.FieldExperience": "Experience",
   "SDM.FieldFatigue": "Fatigue",
   "SDM.FieldFinancier": "Financier",
   "SDM.FieldFoes": "Foes",
