--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -397,10 +397,11 @@
   "SDM.FieldCurrentDestination": "Destino",
   "SDM.FieldCurrentLocation": "Localização",
   "SDM.FieldDate": "Data",
-  "SDM.FieldDebt": "Débito",
+  "SDM.FieldDebt": "Dívida",
   "SDM.FieldDefense": "Defesa",
   "SDM.FieldETA": "Tempo Estimado",
   "SDM.FieldExpense": "Despesa",
+  "SDM.FieldExperience": "Experiência",
   "SDM.FieldFatigue": "Fadiga",
   "SDM.FieldFinancier": "Financiador",
   "SDM.FieldFoes": "Inimigos",
@@ -415,12 +416,12 @@
   "SDM.FieldLocationB": "Destino",
   "SDM.FieldLooks": "Aparência",
   "SDM.FieldMentalDefense": "Defesa Mental",
-  "SDM.FieldMotto": "Mote",
+  "SDM.FieldMotto": "Lema",
   "SDM.FieldName": "Nome",
   "SDM.FieldPhysicalDefense": "Defesa Física",
   "SDM.FieldPlayerXP": "XP Jogador",
   "SDM.FieldPlayerXPTitle": "Experiência do Jogador",
-  "SDM.FieldQuirk": "Quirk",
+  "SDM.FieldQuirk": "Peculiaridade",
   "SDM.FieldRevenue": "Renda",
   "SDM.FieldRisk": "risco",
   "SDM.FieldRunName": "Nome da Rota",
@@ -429,12 +430,12 @@
   "SDM.FieldSocialDefense": "Defesa Social",
   "SDM.FieldSpecies": "Espécie",
   "SDM.FieldSpeed": "Velocidade",
-  "SDM.FieldSupply": "Requisito",
-  "SDM.FieldSupplyPerWeek": "Requisito / Semana",
+  "SDM.FieldSupply": "Suprimento",
+  "SDM.FieldSupplyPerWeek": "Suprimento / Semana",
   "SDM.FieldTransportType": "Tipo",
   "SDM.FieldWealth": "Riqueza",
-  "SDM.FieldWeeklyCost": "Custo / Semana",
-  "SDM.FieldWeeklySupply": "Requisito / Semana",
+  "SDM.FieldWeeklyCost": "Custo (€) / Semana",
+  "SDM.FieldWeeklySupply": "Suprimento / Semana",
   "SDM.ForceOrFail": "Sacrifique algo ou falhe",
   "SDM.FrequencyDay": "Dia",
   "SDM.FrequencyWeek": "Semana",
@@ -685,7 +686,7 @@
   "SDM.TabNotes": "Anotações",
   "SDM.TabPet": "Pet",
   "SDM.TabRoutes": "Rotas",
-  "SDM.TabTransport": "Transportes",
+  "SDM.TabTransport": "Montarias & Motores",
   "SDM.Target": "Alvo",
   "SDM.Total": "total",
   "SDM.Transfer": "Transferir {type}",
